force-app/main/default/objects/MGAgencia_Integration_Log__c/MGAgencia_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Registro de trazabilidad por cada solicitud entrante de la integración MGAgencia. Un registro por request: resultado, duración, código de respuesta y referencia al Lead creado. Sin payload crudo (minimización de datos personales).</description>
    <label>Log Integración MGAgencia</label>
    <nameField>
        <displayFormat>MGL-{00000}</displayFormat>
        <label>Número de Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs Integración MGAgencia</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>