force-app/main/default/objects/MGAgencia_Integration_Log__c/fields/Duplicated__c.field-meta.xml
<CustomField>
    <fullName>Duplicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que el Lead creado por esta solicitud fue detectado como duplicado de un Lead existente no perdido.</description>
    <inlineHelpText>La solicitud resultó en un Lead marcado como duplicado.</inlineHelpText>
    <label>Duplicado</label>
    <type>Checkbox</type>
</CustomField>