force-app/main/default/objects/MGAgencia_Integration_Log__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>Detalle interno del error (tipo y mensaje de la excepción). Solo para diagnóstico interno; nunca se devuelve al consumidor de la API.</description>
    <inlineHelpText>Detalle interno del error de procesamiento. No se expone a MGAgencia.</inlineHelpText>
    <label>Detalle de Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>