force-app/main/default/objects/MGAgencia_Integration_Log__c/fields/External_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_Id__c</fullName>
    <description>Identificador externo del Lead enviado por MGAgencia (external_lead_id), copiado al log para correlación.</description>
    <inlineHelpText>Identificador del Lead en el sistema de origen (MGAgencia), si fue enviado.</inlineHelpText>
    <label>ID Externo MGAgencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>