force-app/main/default/objects/MGAgencia_Integration_Log__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <description>UUID generado por la integración y devuelto a MGAgencia como integration_id. Identificador público del request; nunca se exponen IDs internos de Salesforce.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identificador de integración (UUID) devuelto a MGAgencia para referenciar esta solicitud.</inlineHelpText>
    <label>ID de Integración</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>