force-app/main/default/objects/MGAgencia_Integration_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referencia interna al Lead creado por esta solicitud. Uso interno; nunca se devuelve a MGAgencia.</description>
    <inlineHelpText>Lead creado por esta solicitud de integración.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Logs Integración MGAgencia</relationshipLabel>
    <relationshipName>MGAgencia_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>