force-app/main/default/objects/MGAgencia_Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Resultado del procesamiento de la solicitud.</description>
    <inlineHelpText>Resultado del procesamiento: recibido, creado, validación fallida o error.</inlineHelpText>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RECEIVED</fullName>
            </value>
            <value>
                <fullName>CREATED</fullName>
            </value>
            <value>
                <fullName>VALIDATION_FAILED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>